--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
-    "jszip": "^3.10.1",
-    "lucide-react": "^0.560.0",
     "next": "^16.0.8",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "@phosphor-icons/react": "^2.1.10"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^10.1.7",
