--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@lexical/react": "^0.39.0",
+    "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
@@ -27,9 +32,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
-    "sonner": "^2.0.7",
-    "@phosphor-icons/react": "^2.1.10",
-    "@lexical/react": "^0.39.0"
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^10.1.7",
