--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --max-warnings=0",
+    "test": "jest",
     "export": "next build && next export",
     "analyze": "ANALYZE=true next build",
     "storybook": "storybook dev -p 6006",
@@ -37,6 +38,11 @@
   "devDependencies": {
     "@storybook/addon-docs": "^10.1.7",
     "@storybook/nextjs": "^10.1.7",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.0.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
@@ -48,6 +54,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^10.0.0",
     "husky": "9.1.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "prettier": "^3.2.5",
     "storybook": "^10.1.7",
     "typescript": "^5.9.3"
