--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@lexical/react": "^0.39.0",
     "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-tooltip": "^1.2.8",
